--- a/website_management/static/css/style.css
+++ b/website_management/static/css/style.css
@@ -46,33 +46,22 @@ h3 a{
 #contact_info{
     margin-top: 80px;
 }
-#home_h3{
+#home_h4{
     font-family: Sabon;
     margin-top: 25px;
     font-size: 25px;
     text-align: justify;
 }
-#home_tables{
-    text-align: center;
-    margin-top: 30px;
-    justify-content: space-between;
-}
-
-#home_tables::after{
-    content: "";
-    clear: both;
-    display: table;
-}
 
 #tb_classes{
-    width: 50%;
+    width: auto;
     padding: 5px;
     float: right;
 }
 #tb_provenience{
-    width: 50%;
+    width: auto;
     padding: 5px;
-    float: left;
+    padding: 5px;
 }
 
 .tg{
@@ -90,6 +79,11 @@ h3 a{
     font-size: 21px;
 }
 
+#home_table_imgs{
+    justify-content: space-between;
+    display: flex;
+    margin-top: 30px;
+}
 /* nav_bar */
 header{
     background: #1b3b5d;
@@ -588,8 +582,6 @@ input#leng_f, input#leng_t, input#weak_f, input#weak_t {
     }
 
 }
-
-/*WAIT ALLERT*/
 
 
 
