--- a/website_management/templates/home.html
+++ b/website_management/templates/home.html
@@ -67,33 +67,33 @@
                 </tr>
                 <tr>
                     <td class="tg-0lax">{{ num_RCSB }}</td>
-                    <td class="tg-0lax"><a href=" http://www.rcsb.org/pdb/">RCSB Protein Data Bank</a></td>
+                    <td class="tg-0lax"><a href="https://www.rcsb.org/">RCSB Protein Data Bank</a></td>
                 </tr>
                 <tr>
                     <td class="tg-0lax">{{ num_CRW }}</td>
-                    <td class="tg-0lax"><a href="http://www.rna.ccbb.utexas.edu/">Gutell Lab CRW Site</a></td>
+                    <td class="tg-0lax"><a href="https://crw-site.chemistry.gatech.edu/">Gutell Lab CRW Site</a></td>
                 </tr>
                 <tr>
                     <td class="tg-0lax"> {{ num_tmRNA }}</td>
-                    <td class="tg-0lax"><a href="http://rnp.uthct.edu/rnp/tmRDB/tmRDB.html">tmRNA Database</a></td>
+                    <td class="tg-0lax"><a href="https://rth.dk/resources/rnp/tmRDB/">tmRNA Database</a></td>
                 </tr>
                 <tr>
                     <td class="tg-0lax">{{ num_sprinzl }}</td>
-                    <td class="tg-0lax"><a href="http://www.uni-bayreuth.de/departments/biochemie/sprinzl/trna/">
+                    <td class="tg-0lax"><a href="http://www.uni-bayreuth.de">
                         Sprinzl tRNA Database</a></td>
                 </tr>
                 <tr>
                     <td class="tg-0lax">{{ num_RNASE }}</td>
-                    <td class="tg-0lax"><a href="http://jwbrown.mbio.ncsu.edu/RNaseP/home.html">RNase P Database</a>
+                    <td class="tg-0lax"><a href="https://academic.oup.com/nar/article/26/1/351/2379438">RNase P Database</a>
                     </td>
                 </tr>
                 <tr>
                     <td class="tg-0lax">{{ num_SRP }}</td>
-                    <td class="tg-0lax"><a href="http://rnp.uthct.edu/rnp/SRPDB/SRPDB.html"> SRP Database</a></td>
+                    <td class="tg-0lax"><a href="https://www.structuredretailproducts.com/"> SRP Database</a></td>
                 </tr>
                 <tr>
                     <td class="tg-0lax">{{ num_RFAM }}</td>
-                    <td class="tg-0lax"><a href="http://www.sanger.ac.uk/Software/Rfam/index.shtml"> Rfam Database</a>
+                    <td class="tg-0lax"><a href="https://rfam.org/"> Rfam Database</a>
                     </td>
                 </tr>
                 <tr>
@@ -102,7 +102,7 @@
                 </tr>
                 </tbody>
             </table>
-            <img src="{{ url_for('static', filename='img/albero.png') }}" style="max-width:60%; max-height:60%; border: 1px solid black">
+            <img src="{{ url_for('static', filename='img/albero.png') }}" id="albero_png" style="max-width:60%; max-height:60%; border: 1px solid black">
             <table class="tg">
                 <thead>
                 <tr>
